--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -12,7 +12,7 @@ body {
   line-height: 1;
   color: $gray;
   font-weight: 400;
-  background-color: #f5f5f575;
+  background-color: #fff;
   }
   .wrapper {
     max-width: 1500px;
@@ -54,6 +54,8 @@ body {
         padding:10px 40px;
         border:none;
         margin-left:20px;
+        background-color: #fff;
+        border-radius: 4px;
     }
   }
   .form-control{
@@ -253,7 +255,6 @@ html {
       }
     }
     &-item {
-    //   font-family: $font-secondary;
       font-weight: 400;
       font-size: 15px;
       line-height: calc(18 / 15);
@@ -261,6 +262,28 @@ html {
       background: -webkit-linear-gradient($color1, $color2);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
+      position: relative;
+      display: inline-block;
+      transition: all .15s linear;
+      &:hover::before{
+        animation: move .9s linear;
+        position: absolute;
+        content: " ";
+        left: 0;
+        top: 20px;
+        width: 100%;
+        height: 2px;
+        background: $primary-color;
+        z-index: 2;
+      }
+    }
+    @keyframes move{
+      from {
+        width: 0;
+      }
+      to{
+        width: 100%;
+      }
     }
     &-link {
       color: inherit;
@@ -399,6 +422,7 @@ html {
   }
 }
 .form-search{
+  border-radius: 10px;
   margin-top: 50px;
   padding: 20px 10px;
   display: fe;
@@ -407,10 +431,21 @@ html {
   align-items: center;
   justify-content: end;
   background-color: #fff;
+  background-image: linear-gradient(90deg, $color2 0%, $color1 100%);
+  form{
+    p{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+  
 }
 .filter-search{
   padding: 7px 35px;
   margin-right: 10px;
+  border: none;
+  border-radius: 4px;
   background-color: #fff;
 }
 .center_pag {
@@ -531,4 +566,239 @@ html {
     left: 0;
     width: 100px;
   }
+}
+li.next.next_page {
+  display: none;
+}
+
+li.prev.previous_page.disabled {
+  display: none;
+}
+li.prev.previous_page {
+  display: none;
+}
+.pagination{
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .active{
+    a{
+      color: #fff !important;
+      background: $primary-color !important;
+    }
+  }
+  a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 100%;
+    border: none !important;
+    margin-left: 5px;
+  }
+}
+@keyframes move-top{
+  from {
+    visibility: hidden;
+  }
+  to{
+    visibility: visible;
+    transform: translateY(-20px)
+  }
+}
+.courses {
+  // padding: 78px 97px;
+  &-main {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  &-star{
+    display: flex;
+    align-items: flex-start;
+    gap: 0 5px;
+    width: 20px;
+    height: 20px;
+    img{
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+  &-heading {
+    font-size: 40px;
+    line-height: 158.34%;
+    background: -webkit-linear-gradient($color1, $color2);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    margin-bottom: 38px;
+  }
+  &-category {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0 34px;
+    margin-bottom: 55px;
+  }
+  &-link {
+    font-size: 14px;
+    line-height: 25px;
+    color: $gray;
+    position: relative;
+    &:hover {
+      &::before {
+        content: "";
+        position: absolute;
+        text-decoration: none;
+        bottom: 0;
+        left: 0;
+        width: 12px;
+        height: 1px;
+        color: $primary-color;
+      }
+    }
+  }
+  &-item {
+    width: 303px;
+    border-radius: 10px;
+    position: relative;
+    transition: all .9s linear;
+    &:hover{
+      .courses-button{
+        animation: move-top .9s linear;
+        visibility: visible;
+      }
+    }
+  }
+  &-img {
+    width: 100%;
+    height: 206px;
+    overflow: hidden;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 10px 10px 0 0;
+    }
+  }
+  &-info {
+    background: linear-gradient(253.58deg, #ffc000 1.55%, #ff8a00 95.8%);
+    padding: 13px 0px 18px 30px;
+    font-size: 14px;
+    line-height: 152.34%;
+    color: #ffffff;
+    border-radius: 0 0 10px 10px;
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    flex-direction: column;
+    gap: 5px 0;
+  }
+  &-name {
+    font-size: 18px;
+    font-weight: 500;
+    text-transform: capitalize;
+  }
+  &-author { 
+    text-transform: capitalize;
+    span{
+      color: gray;
+      font-size: 14px;
+    }
+  }
+  &-type {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 5px 18px;
+    background: linear-gradient(253.58deg, #ffc000 1.55%, #ff8a00 95.8%);
+    color: #ffffff;
+    font-size: 14px;
+    line-height: 152.34%;
+    border-radius: 0 9px 0 10px;
+  }
+  &-list {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 15px 9px;
+    margin-bottom: 41px;
+  }
+  &-but{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0 30px;
+    position: absolute;
+    top: 50%;
+    left: 20%;
+    visibility: hidden;
+  }
+  &-button {
+    border-radius: 15px;
+    display: inline-block;
+    padding: 10px 20px;
+    background: linear-gradient(253.58deg, #ffc000 1.55%, #ff8a00 95.8%);
+    text-decoration: none !important;
+    color: #fff;
+    text-transform: capitalize;
+  }
+}
+@media screen and (max-width: 1279px) {
+  .courses {
+    padding: 70px 80px;
+  }
+  .courses-list {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .courses-button {
+    margin-bottom: 0;
+  }
+}
+@media screen and (max-width: 1023px) {
+  .courses-list {
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 100px;
+    justify-content: space-between;
+  }
+  .courses-heading {
+    margin-bottom: 20px;
+  }
+  .courses-category {
+    gap: 0 13px;
+
+    margin-bottom: 30px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .courses-list {
+    grid-template-columns: repeat(1, 1fr);
+    gap: 50px 0;
+  }
+  .courses-heading {
+    font-size: 20px;
+  }
+
+  .courses-category {
+    font-size: 12px;
+    flex-wrap: wrap;
+    gap: 20px 30px;
+  }
+  .courses-button {
+    padding: 10px 50px;
+  }
+}
+.rating {
+  width: 180px;
+}
+
+.rating__star {
+  cursor: pointer;
+  color: #dabd18b2;
+}
+.new-author{
+  width: 350px !important;
+  padding: 20px 21px !important;
 }
