--- a/app/views/books/_book.slim
+++ b/app/views/books/_book.slim
@@ -1,15 +1,18 @@
-.book-list
-  p.book-title
-    | Tên:  
-    = book.name
-  p.book-author
-    | Tác giả: 
-    = book.author.name
-  p.book-amount
-    | Sô lượng:
-    = book.amount
-  p.book-rate
-    | Đánh giá:
-    = book.rates.map(&:star).sum
-  = link_to "follow",'#', class: "follow"         
-  = link_to "Details", "#", class: "details"
+.courses-item
+  .courses-img
+    img alt="" src="https://images.unsplash.com/photo-1635977358539-acdac811214a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=387&q=80" /
+  .courses-info
+    .courses-name
+      = book.name
+    .courses-author
+      span 
+        | by 
+      = book.author.name
+    .courses-star
+      - (1..star(book)).each do |index|
+        = image_tag("star.png")
+  .courses-type
+    = star(book) > 3 ? "Top Rate" : ""
+  .courses-but
+    = link_to "follow",'#', class: "courses-button"         
+    = link_to "Details", "#", class: "courses-button"
