--- a/app/views/admin/publishers/_form_new.slim
+++ b/app/views/admin/publishers/_form_new.slim
@@ -1,13 +1,13 @@
 .publisher-new
+  .publisher-back
+    = link_to image_tag("Back.png") + "Back", admin_books_path
   h1.new 
     | New Publisher
   .publisher-form
     = form_for([:admin, @publisher]) do |form|
       = render "shared/error_messages", object: form.object
       .publisher-form
-        .publisher-form-name
-          = form.label :name
         .publisher-form-fieldname
-          = form.text_field :name
+          = form.text_field :name, placeholder: "Name"
         .publisher-submit
-          = form.submit "Create"
+          = form.submit "Create", class: "button--primary signin-btn publisher-btn"
