--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -12,6 +12,7 @@ head
   script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" 
     integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" 
     crossorigin="anonymous"
+  script crossorigin="anonymous" src="https://kit.fontawesome.com/yourcode.js" 
 
 body
   = render'layouts/header'
