--- a/app/views/admin/authors/_head.slim
+++ b/app/views/admin/authors/_head.slim
@@ -1,8 +1,8 @@
 .head.head-book
   .head-name
-    |Name Book
+    |Name Author
   .books
     p.head-create
-      | Publisher
+      | Birthday
     p.head-amount
       | Amount
