--- a/app/views/admin/books/_add.slim
+++ b/app/views/admin/books/_add.slim
@@ -1,2 +1,2 @@
 #add-form
-  = link_to "Thêm Mới", new_admin_book_path, class: "publisher-add"
+  = link_to "Add Book", new_admin_book_path, class: "publisher-add"
